name:                shaped
version:             0.1.0.0
synopsis:            Another flavor of generic programming
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dan Peebles
maintainer:          pumpkingod@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Shaped, Data.Shaped.Generics, Data.Shaped.TH, Data.Shaped.Types, Data.Shaped.Product
  other-extensions:    GADTs, EmptyCase, MagicHash, DataKinds, PolyKinds, LambdaCase, ViewPatterns, TypeFamilies, DeriveGeneric, TypeOperators, KindSignatures, FlexibleContexts, FlexibleInstances, DefaultSignatures, ScopedTypeVariables, UndecidableInstances, ExistentialQuantification
  build-depends:       base >=4.7 && <4.8, ghc-prim
  hs-source-dirs:      src
  default-language:    Haskell2010
